# OpenRM

./: .gitignore  CMakeLists.txt  run.sh
cuda/: CMakeLists.txt
cuda/include/: cudatools.h
cuda/src/nms/: nms.cu
cuda/src/resize/: kernal.cu  resize.cu
include/tensorrt/: tensorrt.h
include/video/: video.h
src/tensorrt/: tensorrt.cpp
src/video/: CMakeLists.txt  hik.cpp
